# ChangeLog for media-libs/gstreamer
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.32 2003/09/07 18:47:09 foser Exp $

*gstreamer-0.6.3 (07 Sep 2003)

  07 Sep 2003; foser <foser@gentoo.org> gstreamer-0.6.3.ebuild :
  New version

  12 Aug 2003; Jason Wever <weeve@gentoo.org> gstreamer-0.6.1-r1.ebuild:
  Changed ~sparc keyword to sparc.

  12 Aug 2003; Jason Wever <weeve@gentoo.org> gstreamer-0.6.0-r2.ebuild:
  Changed ~sparc keyword to sparc.

  15 Jul 2003; Alastair Tse <liquidx@gentoo.org> gstreamer-0.6.2.ebuild:
  putting this back in ~x86

*gstreamer-0.6.2 (10 Jun 2003)

  10 Jun 2003; foser <foser@gentoo.org> gstreamer-0.6.2.ebuild :
  Disable docs, they seem broken again. Use gnome.org for SRC_URI

  30 May 2003; Luca Barbato <lu_zero@gentoo.org> gstreamer-0.6.{0-r2.1}.ebuild :
  Add ppc to KEYWORDS

*gstreamer-0.6.1-r1 (21 Apr 2003)

  21 Apr 2003; foser <foser@gentoo.org> gstreamer-0.6.1-r1.ebuild :
  re-enabled docs building, just gtk-doc for now
  bumped to get it some testing

*gstreamer-0.6.1 (19 Apr 2003)

  19 Apr 2003; foser <foser@gentoo.org> gstreamer-0.6.1.ebuild :
  New version, remove some patching thats incorporated now

  10 Feb 2003; Aron Griffis <agriffis@gentoo.org> gstreamer-0.6.0-r2.ebuild :
  Add ~alpha to KEYWORDS

*gstreamer-0.6.0-r2 (05 Feb 2003)

  04 Mar 2003; Jason Wever <weeve@gentoo.org> gstreamer-0.6.0-r2.ebuild,
  files/gstreamer-0.6.0-sparc.patch:
  Added patch for sparc. Resolves bug #15502. Thanks to Alvaro Figueroa (fede2)
  for pointing out the fix :)

  05 Feb 2003; foser <foser@gentoo.org> gstreamer-0.6.0-r2.ebuild :
  Added patch to use opt scheduler as default

*gstreamer-0.6.0-r1 (04 Feb 2003)

  04 Feb 2003; foser <foser@gentoo.org> gstreamer-0.6.0-r1.ebuild :
  Revision bump with a lot of needed SLOT related changes
  Disabled docs until the gstreamer team gets things sorted out