@@ -1,13 +1,13 @@
-MD5 fd9c460066f4f9cf5a64267b8fdb3048 ChangeLog 5980
+MD5 05a0638b1c9ced9472f5a1d0724845b9 ChangeLog 6113
 MD5 e5b7eb6c678fd17c99801420d22577de gstreamer-0.6.0-r2.ebuild 2225
 MD5 307f6dc1bbfe3b671121188670ef6640 gstreamer-0.6.1-r1.ebuild 1653
 MD5 0c48fb3811ab9494d3bd88cf1b0aabbf gstreamer-0.6.2.ebuild 1653
+MD5 0fa6c8bb08cdea03a26b48c417d61350 gstreamer-0.6.3.ebuild 1929
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 b6cc9a33736686e5c78e3391416e6268 gstreamer-0.6.3.ebuild 1709
 MD5 2859a53d220f0d4f15d70265c0ae3ee2 files/digest-gstreamer-0.6.0-r2 69
-MD5 25e847f18be30c70bf95d37afd5c82a4 files/digest-gstreamer-0.6.2 69
 MD5 d7d0bd22f575c14e4b5e9dae76109a13 files/digest-gstreamer-0.6.1-r1 69
+MD5 25e847f18be30c70bf95d37afd5c82a4 files/digest-gstreamer-0.6.2 69
+MD5 108e4dae9d3c886119d0b0651d959feb files/digest-gstreamer-0.6.3 69
 MD5 19da7f9f949dee117395e898c2e0bf39 files/gstreamer-0.6.0-sparc.patch 1428
 MD5 6bbd0426345ae753a9833575e160ad71 files/gstreamer-default_scheduler_opt.patch 2100
 MD5 a74f9b21ddb30cb0925e25cc18fc9213 files/gstreamer-error_report.patch 771
-MD5 108e4dae9d3c886119d0b0651d959feb files/digest-gstreamer-0.6.3 69
