@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gstreamer
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.32 2003/09/07 18:47:09 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.33 2003/09/08 19:11:03 liquidx Exp $
+
+  08 Sep 2003; Alastair Tse <liquidx@gentoo.org> gstreamer-0.6.3.ebuild:
+  added quick workaround for gcc-3.3.1 compiler warnings
 
 *gstreamer-0.6.3 (07 Sep 2003)
 
